# app-ensino

./: README.md
backend/: .gitignore  Dockerfile  README.md  exemple_config.ini  pyproject.toml
backend/api/: config.py  main.py
backend/api/sql_api/: crud.py  database.py  models.py  schemas.py
frontend/: App.js  README.md  app.json  package-lock.json  package.json
frontend/.tamagui/: tamagui.config.json
frontend/app/: _layout.tsx  cadastro.tsx  index.tsx  login.tsx
frontend/app/context/: actions.js  reducers.js  store.js
frontend/app/contexts/: UserContext.js
frontend/app/loginModule/: cadastro.tsx  login.tsx
frontend/app/userModule/: home.tsx  intro.tsx  introoriginal.tsx  questao.tsx
frontend/app/users/: [user].tsx  home.tsx  intro.tsx  questao.tsx
frontend/components/: Header.tsx  MyButton.ts  MyStack.ts
frontend/data/: categories.json  questions.json
frontend/src/services/: api.js
