[tool.poetry]
name = "api"
version = "0.1.0"
description = "api rest"
authors = ["Bruna Ferreira <bferreira.slv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.8"
pydantic = "^1.10.7"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api.main:start"
